<resources>
    <string name="app_name">MealBuddy</string>
    <string name="meal_buddy_text">MealBuddy</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_text">Sign Up!</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="login_success_toast">Login Successful</string>
    <string name="login_fail_toast">Login Failed!</string>
    <string name="signup_dialog_text">MealBuddy Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="menu_meal_planner">Planner</string>
    <string name="menu_my_meals">My Meals</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_shopping_list">Shopping Lists</string>
    <string name="plan_name_hint">Enter Plan Name</string>
    <string name="start_date_button">Select Start Date</string>
    <string name="plan_period_text">Plan Period</string>
    <string name="one_week_button">1 Week</string>
    <string name="two_week_button">2 Weeks</string>
    <string name="serving_size_text">Serving Size</string>
    <string name="add_plan_title">Add A Plan</string>
    <string name="logout">Logout</string>
    <string name="spoonacular_key">ubiDJzZ5Gdmsh2A6pgvzs6vsPGiZp1rcUExjsn8X1tpDY1DXUp</string>
</resources>
