<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:text="@string/meal_buddy_text"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:padding="10dp"/>


    <EditText
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/username_hint"/>

    <EditText
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:padding="10dp"
            android:textSize="12sp"
            android:textColor="?attr/colorPrimary"
            android:textAlignment="center"
            android:layout_weight="0.39"/>

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:padding="10dp"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_weight="0.36"/>


    </LinearLayout>

</LinearLayout>