<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/plan_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/plan_name_hint"/>

    <DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/dialog_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_period_text"
        android:padding="5dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        >

        <RadioButton
            android:id="@+id/one_week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_week_button"
            android:textAlignment="center"
            android:paddingRight="30dp"/>

        <RadioButton
            android:id="@+id/two_week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_week_button"
            android:layout_marginLeft="30dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/serving_size_dialog"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="0.96"/>

        <TextView
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/serving_size_text"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>